tests/dataset/tpc-ds/compiler/pl/q95.error
run: exit status 2
{"order_count":2, "total_net_profit":5, "total_shipping_cost":2}
ERROR: /tmp/q95.pl:95: user:main Unknown message: error('expect failed')
